--- a/src/style/teclado.css
+++ b/src/style/teclado.css
@@ -1,6 +1,6 @@
 .teclado {
     display:grid;
-    grid-template: auto auto auto auto auto / auto auto auto auto;
+    grid-template: 80px 80px 80px 80px 80px / auto auto auto auto;
     grid-template-areas: 
     "c porcent divisao multip"
     "sete oito nove subtr"
