Ajustes de layout

--- a/src/style/teclado.css
+++ b/src/style/teclado.css
@@ -2,7 +2,7 @@
     display:grid;
     grid-template: 80px 80px 80px 80px 80px / auto auto auto auto;
     grid-template-areas: 
-    "c porcent divisao multip"
+    "c c divisao multip"
     "sete oito nove subtr"
     "quatro cinco seis soma"
     "um dois tres equal"
